--- a/favorite-moviedb-2/src/index.css
+++ b/favorite-moviedb-2/src/index.css
@@ -6,22 +6,75 @@
 	font-family: sans-serif;
 }
 
+body {
+	background-color: #ffdeeb;
+}
+
 header {
 	background-color: #ff0062;
 	color: #ffffff;
 	letter-spacing: 0.3rem;
-	height: 8vh;
+	height: 10vh;
+	width: 98vw;
+	margin: 1vh 1vw;
+	border-radius: 1rem;
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 }
 
 header h1 {
 	font-family: "Nerko One", system-ui;
+	margin-left: 1vw;
+	padding-top: 0.3rem;
+}
+
+.search {
+	position: relative;
+	padding-top: 1.2vh;
+	width: 32vw;
+}
+
+.search-input {
+	width: 30vw;
+	height: 5vh;
+	border-radius: 1rem;
+	padding: 6px 10px;
+	font-size: x-large;
+	border: none;
+	outline: none;
+	background-color: #ffffff;
+}
+
+.search-input:focus {
+	background-color: #ffe3ee;
+}
+
+.search button {
+	position: absolute;
+	right: 0;
+	top: 7px;
+	cursor: pointer;
+	height: 7vh;
+	font-size: x-large;
+	aspect-ratio: 2;
+	border: none;
+	border-radius: 1rem;
+	background-color: #d4d3d3;
+}
+
+.search button:hover {
+	background-color: #a5a5a5;
+}
+
+.numresult {
+	letter-spacing: normal;
+	margin-right: 1vw;
+	padding-top: 3vh;
 }
 
 main {
 	display: flex;
-	height: 92vh;
+	height: 88vh;
 	width: 100vw;
 }
 
@@ -32,45 +85,13 @@ main {
 .container {
 	width: 50vw;
 	padding: 0.5rem 0.5vw;
-	margin: 1rem auto;
+	margin: 1rem 3rem;
 	border-radius: 1rem;
-}
-
-.search {
-	box-shadow: 0 0 10px #424242;
-	display: flex;
-}
-
-.search-input {
-	width: 42.5vw;
-	border: none;
-	border-bottom: 1px solid #ff73a9;
-	outline: none;
-	margin: 0.5rem 0 0.5rem 0.5vw;
-	padding: 0.5rem 1vw;
-	font-size: x-large;
-	font-weight: 700;
-	color: #ff0062;
-}
-
-.search-input:focus {
-	border-bottom: 3px solid #ff73a9;
-}
-
-.search button {
-	cursor: pointer;
-	margin-top: 0.5rem;
-	margin-right: 0.5vw;
-	width: 4vw;
-	height: 8vh;
-	border-radius: 1rem;
-	background-color: #ff418a;
-	font-size: x-large;
-	border: none;
 }
 
 .note-list {
-	box-shadow: 0 0 10px #ff0062;
+	border: 2px solid #ff0062;
+	background-color: #fff;
 	width: 50vw;
 	max-height: 65vh;
 	list-style-type: none;
@@ -135,10 +156,11 @@ main {
 
 .form-add-note {
 	width: 28vw;
-	margin: 1rem auto;
+	margin: 1rem 2vw;
 	padding: 1vh 1vw;
 	border-radius: 1rem;
-	box-shadow: 0 0 8px rgb(255, 0, 98);
+	background-color: #fff;
+	box-shadow: 0 0 8px #ff0062;
 	text-align: center;
 }
 
@@ -158,8 +180,9 @@ label {
 	padding: 0 0.2vw 0.3rem 0.3vw;
 	border: none;
 	outline: none;
+	background-color: #fff;
 	border-bottom: 1px solid #ff0062;
-	color: #09ff00;
+	color: #ff2600;
 }
 
 .textarea {
@@ -168,35 +191,42 @@ label {
 	border: 1px solid #ff0062;
 	outline: none;
 	padding: 0.3rem 0.3vw;
+	background-color: #fff;
 	color: #0011ff;
 }
 
 .btn {
 	margin: 1rem auto;
-	padding: 0.5rem 0;
+	height: 8vh;
 	border-radius: 1rem;
 	box-shadow: 0 0 3px #ff0062;
 	cursor: pointer;
 }
 
-.btn:hover {
-	background-color: #ffa5c8;
-	color: #000;
-}
-
 .addnotes-btn {
 	font-weight: 800;
-	background-color: rgb(255, 0, 98);
+	background-color: #ff0062;
 	color: #fff;
 	width: 8vw;
 	border: none;
 }
 
+.addnotes-btn:hover {
+	background-color: #ff66a1;
+	color: #000;
+}
+
 .action-btn {
 	position: absolute;
 	right: 0.5vw;
-	margin: 1rem 2vw;
+	margin: 1rem 2.5vw;
 	width: 30vw;
-	border: 2px solid rgb(255, 0, 98);
 	background-color: #fff;
+	border: 1px solid #ff0062;
+}
+
+.action-btn:hover {
+	border: 2px solid #ff0062;
+	box-shadow: 0 0 5px #ff0062;
+	background-color: #ffb9d4;
 }
