deleted pricing page and added product page

--- a/world-weather/src/pages/PageNotFound.module.css
+++ b/world-weather/src/pages/PageNotFound.module.css
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background-color: #f76336;
+	background-color: var(--color-danger);
 }
 
 .main h1 {
