before implementing product page details

--- a/world-weather/src/index.css
+++ b/world-weather/src/index.css
@@ -7,9 +7,12 @@
 	--color-brand--2: #00c46a;
 	--color-brand--3: #2e0aff;
 
+	--color-danger: #f76336;
+
 	--color-dark--0: #242a2e;
 	--color-dark--1: #2d3439;
 	--color-dark--2: #42484d;
+	--color-dark--3: #666666;
 	--color-light--1: #aaa;
 	--color-light--2: #ececec;
 	--color-light--3: #d6dee0;
