--- a/world-weather/src/components/PageNav.module.css
+++ b/world-weather/src/components/PageNav.module.css
@@ -3,8 +3,8 @@
 	justify-content: space-between;
 	align-items: center;
 	padding: 1rem 2rem;
-	background-color: rgba(255, 255, 255, 0.5);
-	border-bottom: 1px solid #fff;
+	background-color: rgba(0, 0, 0, 0.4);
+	border-bottom: 1px solid rgb(255, 255, 255, 0.5);
 }
 
 .title {
@@ -13,12 +13,12 @@
 }
 
 .nav img {
-	width: 2.5rem;
-	height: 2.5rem;
+	width: 3rem;
+	height: 3rem;
 }
 
 .nav h1 {
-	font-size: 2.5rem;
+	font-size: 3rem;
 	margin: 0 1rem;
 }
 
