--- a/world-weather/src/components/Weather.module.css
+++ b/world-weather/src/components/Weather.module.css
@@ -46,6 +46,13 @@
 	font-weight: 900;
 }
 
+.flexRow {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+}
+
 .grid_1 {
 	display: grid;
 	grid-template-columns: 32rem;
