--- a/world-weather/src/index.css
+++ b/world-weather/src/index.css
@@ -69,9 +69,14 @@ input:focus {
 	text-decoration: none;
 	font-size: 1.6rem;
 	font-weight: 600;
-	padding: 1rem 3rem;
+	padding: 1rem;
 	border-radius: 5px;
 	transition: ease-in 0.3s;
+	letter-spacing: 0.1rem;
+	word-spacing: 0.3rem;
+	display: flex;
+	align-items: center;
+	gap: 1rem;
 }
 
 .cta:hover,
